# upicore

./: .gitignore  CMakeLists.txt  LICENSE_NOTICE.txt  README.md  upicore.hpp.in
ctest/: upicore.cmake
src/: CMakeLists.txt  main.cpp  pipeline.hpp
src/cxx/: memory.cpp  memory.hpp  non_copyable.cpp  non_copyable.hpp  trace.cpp  trace.hpp  tuple.cpp  tuple.hpp
src/pipeline/: data.cpp  data.hpp  in_process.cpp  in_process.hpp  input.cpp  input.hpp  out_process.cpp  out_process.hpp  output.cpp  output.hpp  port.cpp  port.hpp  process.cpp  process.hpp  tuple_data.cpp  tuple_data.hpp
src/utility/: pod.cpp  pod.hpp
